# Consensus-VS

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml
data/fixtures/: btk_actives.csv  btk_decoys.csv  cached_docking_scores.csv  offtarget_BMX.csv  offtarget_EGFR.csv  offtarget_ITK.csv  offtarget_JAK2.csv  offtarget_TEC.csv
docs/: methods.md  pipeline.md
docs/superpowers/specs/: 2026-04-20-btk-aidd-design.md
notebooks/: walkthrough.ipynb
scripts/: generate_fixtures.py
src/btk_aidd/: __init__.py  cli.py  config.py  logger.py  pipeline.py
src/btk_aidd/analysis/: __init__.py  admet.py  covalent.py  moa.py  selectivity.py
src/btk_aidd/data/: __init__.py  chembl.py  decoys.py  ligands.py  receptor.py
src/btk_aidd/docking/: __init__.py  cached_engine.py  engine.py  factory.py  vina_engine.py
src/btk_aidd/metrics/: __init__.py  enrichment.py
src/btk_aidd/scoring/: __init__.py  consensus.py  ml.py  physics.py
src/btk_aidd/viz/: __init__.py  plots.py
tests/: conftest.py  test_analysis.py  test_cli.py  test_config.py  test_data.py  test_docking.py  test_metrics.py  test_pipeline.py  test_scoring.py
